k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # Name of the deployment
  name: client-deployment
spec:
  # Nb of replicas of pods 
  replicas: 3
  # Will take Labels matching with "component: web"
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      # Define label into the template ( futur pod(s) )
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: ccazin/multi-client
          ports:
            - containerPort: 3000
