k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # Name of the deployment
  name: server-deployment
spec:
  # Nb of replicas of pods 
  replicas: 3
  # Will take Labels matching with "component: web"
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      # Define label into the template ( futur pod(s) )
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: ccazin/multi-server
          ports:
            - containerPort: 5000
