k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  # Name of the deployment
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      # Define label into the template ( futur pod(s) )
      labels:
        component: worker
    spec:
      containers:
        - name: worker
          image: ccazin/multi-worker
